Fix horizontal scrolling in detail pane

--- a/issues/static/css/issues.css
+++ b/issues/static/css/issues.css
@@ -338,8 +338,8 @@
 
 .comment-list {
 	list-style: none;
-	padding: 15px 15px 0 15px;
-	margin: 0 -15px;
+	padding: 15px 0 0 0;
+	margin: 0;
 	border-top: 1px solid #ccc;
 }
 
